pgrx-tests/tests/todo/array-as-pbox.stderr
error[E0277]: `PBox<'_, FlatArray<'_, i32>>` cannot be passed into a Postgres function as a Datum
 --> tests/todo/array-as-pbox.rs:8:18
  |
7 | #[pg_extern]
  | ------------ in this procedural macro expansion
8 | fn something<'a>(_arr: PBox<'a, FlatArray<'a, i32>>) {
  |                  ^^^^ the trait `ArgAbi<'_>` is not implemented for `PBox<'_, FlatArray<'_, i32>>`
  |
  = help: the following other types implement trait `ArgAbi<'fcx>`:
            &'fcx T
            &'fcx [u8]
            &'fcx str
            &MemCx<'fcx>
            *mut FunctionCallInfoBaseData
            AnyArray
            AnyElement
            AnyNumeric
          and $N others
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
 --> $WORKSPACE/pgrx/src/callconv.rs
  |
  |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
  |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
